// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render size Button 1`] = `
<button
  className="nice-btn default large "
  disabled={false}
  onClick={[Function]}
  style={null}
  type="button"
>
  Large
</button>
`;

exports[`<Button /> should render style Button 1`] = `
<button
  className="nice-btn primary medium "
  disabled={false}
  onClick={[Function]}
  style={null}
  type="button"
>
  Primary
</button>
`;

exports[`<Button /> should render style and size Button 1`] = `
<button
  className="nice-btn primary large "
  disabled={false}
  onClick={[Function]}
  style={null}
  type="button"
>
  Primary large
</button>
`;

exports[`<Button /> should render the Button 1`] = `
<button
  className="nice-btn default medium "
  disabled={false}
  onClick={[Function]}
  style={null}
  type="button"
>
  Default
</button>
`;
